--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/编程语言中的特性和语法 Overview/一/8. **面向对象编程（Object-Oriented Programming）**.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/编程语言中的特性和语法 Overview/一/8. **面向对象编程（Object-Oriented Programming）**.md
@@ -1529,11 +1529,571 @@
 
 ### ----------------------------------
 
+### 8.5 **多态性（Polymorphism）**
 
+##### **定义**：
+
+**多态性（Polymorphism）** 是面向对象编程中的核心概念之一，指的是在同一接口或方法调用下，不同类可以有不同的实现。这允许不同类型的对象通过相同的接口进行操作，从而实现代码的复用、灵活性和可扩展性。
+
+多态性的主要形式包括：
+
+1. **子类化（Subclassing）**：通过继承，子类可以覆盖父类的行为，实现多态性。父类定义了一个接口，而子类提供不同的实现。
+2. **函数重载（Function Overloading）**：同名函数可以根据参数的不同（类型或数量）具有多种实现形式。
+3. **接口多态（Interface Polymorphism）**：不同类实现相同的接口，并提供各自的实现。
+
+##### **关键特点**：
+
+- **接口复用**：同一接口可以在多个类中复用，不同类可以根据需要提供不同的实现。
+- **动态绑定**：在运行时，根据实际对象的类型选择合适的方法实现，这提高了程序的灵活性。
+- **可扩展性**：通过多态性，可以轻松扩展程序，添加新的实现，而无需修改现有代码。
+- **提高代码复用性**：通过抽象接口，可以编写通用的代码，处理不同类型的对象。
+
+##### **实现方式**：
+
+多态性的实现方式主要有以下几种：
+
+1. **子类化（Subclassing）**：
+   - **方法**：通过继承关系，子类可以重写父类的方法，实现不同的行为。父类定义接口，子类提供具体实现。
+   - **示例语言**：Java、C++、Python 等。
+   - **优点**：
+     - **灵活性**：子类可以根据需要自定义行为，同时复用父类的公共代码。
+     - **代码复用**：继承关系使得子类可以共享父类的属性和方法。
+   - **缺点**：
+     - **耦合度高**：子类和父类之间存在较强的耦合，可能影响代码的可维护性。
+     - **不灵活**：继承层次过深时，类的结构可能变得复杂。
+
+2. **函数重载（Function Overloading）**：
+   - **方法**：在同一作用域内定义多个名称相同但参数不同的函数，编译器根据调用时传入的参数来选择合适的实现。
+   - **示例语言**：C++、Java 等。
+   - **优点**：
+     - **方便性**：函数重载可以使接口更加简洁，减少函数命名的冲突。
+     - **灵活性**：根据参数类型或数量的不同，可以定义不同的处理方式。
+   - **缺点**：
+     - **复杂性**：如果过度使用重载，代码的可读性可能受到影响，特别是在参数类型不明确时。
+
+3. **接口多态（Interface Polymorphism）**：
+   - **方法**：不同类实现同一个接口，并提供各自的实现。调用时，运行时系统会选择具体的实现。
+   - **示例语言**：Java、C#、Python 等。
+   - **优点**：
+     - **解耦**：接口和实现分离，允许在不修改现有代码的情况下扩展新实现。
+     - **代码复用**：可以通过统一的接口操作不同类型的对象，提高代码的复用性。
+   - **缺点**：
+     - **实现复杂性**：需要为每个实现编写具体的类，可能增加开发工作量。
+
+##### **设计上的优劣与取舍**：
+
+1. **子类化 vs 接口多态**：
+   - **子类化**：
+     - **优点**：继承复用了父类的代码，使得子类可以共享父类的属性和方法，减少代码重复。
+     - **缺点**：继承关系会导致类与类之间耦合度较高，不利于扩展和维护。
+   - **接口多态**：
+     - **优点**：通过接口分离实现，可以实现低耦合，增加系统的可扩展性和灵活性。
+     - **缺点**：接口定义抽象层次较高，开发者必须为每个实现编写单独的代码，增加了工作量。
+
+2. **函数重载 vs 接口多态**：
+   - **函数重载**：
+     - **优点**：提供了一种简单的方式来支持多种参数形式，接口更加简洁。
+     - **缺点**：重载过多时，接口的可读性会降低，增加调试难度。
+   - **接口多态**：
+     - **优点**：接口多态提供了更灵活的实现方式，减少了对特定参数类型的依赖。
+     - **缺点**：相比函数重载，需要编写更多的代码实现，增加了开发成本。
+
+##### **主流编程语言实现示例**：
+
+1. **Java 子类化实现多态**：
+
+    ```java
+    class Animal {
+        // 定义一个抽象方法，让子类实现
+        public void makeSound() {
+            System.out.println("Animal makes a sound");
+        }
+    }
+
+    class Dog extends Animal {
+        // 重写父类方法
+        @Override
+        public void makeSound() {
+            System.out.println("Dog barks");
+        }
+    }
+
+    class Cat extends Animal {
+        // 重写父类方法
+        @Override
+        public void makeSound() {
+            System.out.println("Cat meows");
+        }
+    }
+
+    public class Main {
+        public static void main(String[] args) {
+            Animal myDog = new Dog();
+            Animal myCat = new Cat();
+            
+            // 多态：根据对象类型调用不同的实现
+            myDog.makeSound();  // 输出: Dog barks
+            myCat.makeSound();  // 输出: Cat meows
+        }
+    }
+    ```
+
+    **解释**：
+    - **父类 `Animal`**：定义了一个 `makeSound()` 方法，表示动物发出声音。具体的声音由子类来实现。
+    - **子类 `Dog` 和 `Cat`**：重写了父类的 `makeSound()` 方法，分别输出狗叫和猫叫。
+    - **多态**：在运行时，根据具体的对象类型（`Dog` 或 `Cat`），调用各自的 `makeSound()` 实现。
+
+2. **C++ 函数重载实现多态**：
+
+    ```cpp
+    #include <iostream>
+    
+    // 定义同名的函数，参数类型不同
+    void print(int i) {
+        std::cout << "Integer: " << i << std::endl;
+    }
+
+    void print(double d) {
+        std::cout << "Double: " << d << std::endl;
+    }
+
+    void print(std::string s) {
+        std::cout << "String: " << s << std::endl;
+    }
+
+    int main() {
+        // 调用不同重载版本的函数
+        print(10);           // 输出: Integer: 10
+        print(3.14);         // 输出: Double: 3.14
+        print("Hello");      // 输出: String: Hello
+        return 0;
+    }
+    ```
+
+    **解释**：
+    - **函数重载**：`print()` 函数根据参数类型不同具有三种不同的实现。调用时，根据传入的参数类型，编译器选择合适的重载版本。
+    - **多态性**：同名函数 `print` 可以处理不同类型的参数，提高了代码的灵活性。
+
+3. **Python 接口多态**：
+
+    ```python
+    class Animal:
+        def make_sound(self):
+            raise NotImplementedError("Subclasses must implement this method")
+        
+    class Dog(Animal):
+        def make_sound(self):
+            print("Dog barks")
+        
+    class Cat(Animal):
+        def make_sound(self):
+            print("Cat meows")
+    
+    def animal_sound(animal):
+        # 接口多态：调用相同接口，不同实现
+        animal.make_sound()
+    
+    # 使用不同实现
+    my_dog = Dog()
+    my_cat = Cat()
+    
+    animal_sound(my_dog)  # 输出: Dog barks
+    animal_sound(my_cat)  # 输出: Cat meows
+    ```
+
+    **解释**：
+    - **接口多态**：`Animal` 类定义了一个抽象方法 `make_sound()`，要求子类实现。`Dog` 和 `Cat` 类分别实现了该接口。
+    - **多态性**：通过 `animal_sound()` 函数，无论传入的是 `Dog` 还是 `Cat` 对象，都会调用对应的 `make_sound()` 实现。
+
+##### **Racket 实现解释器中的多态性代码示例**：
+
+在解释器中实现多态性，主要需要处理不同类型的对象或函数的行为。以下示例展示了如何在 Racket 中实现多态性，特别是通过接口多态实现不同类的行为多态。
+
+**1. 定义多态
+
+接口与实现**
+
+首先，定义多态接口和不同类的具体实现。
+
+```racket
+#lang racket
+
+;; 定义接口类
+(struct interface-def (name methods) #:transparent)
+
+;; 定义实现类
+(struct class-def (name interface methods) #:transparent)
+
+;; 定义对象结构，包含类定义和对象的字段值
+(struct object (class-def field-values) #:transparent)
+
+;; 定义方法结构
+(struct method-def (name params body) #:transparent)
+
+;; 查找方法
+(define (lookup-method obj method-name)
+  (let* ([class (object-class-def obj)]
+         [interface (class-def-interface class)]
+         [methods (interface-def-methods interface)]
+         [method (assoc method-name methods)])
+    (if method
+        (method-def-body (cdr method))
+        (error "Method not found" method-name))))
+
+;; 调用方法
+(define (call-method obj method-name args)
+  (let ([method (lookup-method obj method-name)])
+    (apply method (cons obj args))))
+```
+
+**2. 实现多态行为**
+
+通过不同类实现相同接口，并调用多态方法。
+
+```racket
+;; 定义 Animal 接口，包含 make-sound 方法
+(define animal-interface
+  (interface-def
+   'Animal
+   (list
+    (cons 'make-sound (method-def 'make-sound '() (lambda (self) (error "Not implemented")))))))
+
+;; 定义 Dog 类，继承 Animal 接口
+(define dog-class
+  (class-def
+   'Dog
+   animal-interface
+   (list
+    (cons 'make-sound (method-def 'make-sound '() (lambda (self) (printf "Dog barks\n")))))))
+
+;; 定义 Cat 类，继承 Animal 接口
+(define cat-class
+  (class-def
+   'Cat
+   animal-interface
+   (list
+    (cons 'make-sound (method-def 'make-sound '() (lambda (self) (printf "Cat meows\n")))))))
+
+;; 创建对象
+(define dog-instance (object dog-class '()))
+(define cat-instance (object cat-class '()))
+
+;; 调用多态方法
+(call-method dog-instance 'make-sound '()) ; 输出: Dog barks
+(call-method cat-instance 'make-sound '()) ; 输出: Cat meows
+```
+
+**解释**：
+
+1. **接口定义**：
+   - `animal-interface` 定义了一个 `make-sound` 方法，作为所有动物类的通用接口。
+
+2. **类实现**：
+   - `dog-class` 和 `cat-class` 分别实现了 `make-sound` 方法，输出不同的声音。
+
+3. **多态性**：
+   - 通过 `call-method` 函数，可以调用不同对象的 `make-sound` 方法，实现多态行为。无论对象是 `dog-instance` 还是 `cat-instance`，都可以调用对应的实现。
+
+##### **总结**：
+
+**多态性（Polymorphism）** 是面向对象编程的核心概念，通过允许同一接口具有不同的实现，增强了程序的灵活性和可扩展性。通过继承、函数重载和接口多态，程序可以处理不同类型的对象，同时保持代码的复用性和简洁性。在解释器的设计中，多态性为处理不同类型的表达式、对象或操作提供了强大的机制，能够使解释器具有更高的通用性和灵活性。
+
+如果您有任何进一步的问题或需要更具体的示例，请随时告诉我！
 
 ### -----------------------------------
 
+### 8.4 **封装（Encapsulation）**
 
+##### **定义**：
+
+**封装（Encapsulation）** 是面向对象编程（OOP）的基本概念之一，指将数据（属性）与操作（方法）封装在类中，隐藏其内部实现细节，并通过公开的接口来与外界交互。封装通过控制对类内部成员的访问权限，确保数据的完整性和安全性，同时提高代码的可维护性和模块化程度。
+
+封装的主要思想是将类的内部状态和行为对外部隐藏，只通过公开的方法（通常是 `getter` 和 `setter`）提供访问权限。这样可以防止外部代码直接修改对象的内部数据，避免程序出现意外错误或不一致的状态。
+
+##### **关键特点**：
+
+- **数据隐藏**：通过访问控制修饰符（如 `private`, `protected`, `public`），限制对类内部属性的直接访问，确保数据安全。
+- **公开接口**：通过公开的方法（`getter` 和 `setter`）提供与外部的交互方式，控制对类内部数据的读写权限。
+- **提高模块化**：类的实现细节与其使用者分离，用户无需了解类的内部实现，只需通过公开接口进行操作。
+- **增强代码的可维护性**：封装提高了代码的复用性和可维护性，减少了外部依赖，方便后续的修改和扩展。
+
+##### **实现方式**：
+
+封装的实现通常依赖于访问控制机制，通过限制类的属性和方法的可见性来实现。常见的访问控制修饰符包括：
+
+1. **Private（私有）**：
+   - **定义**：私有成员只能在类的内部访问，外部无法直接访问私有属性或方法。
+   - **用途**：用于隐藏类的内部实现细节，确保数据的安全性。
+   - **示例语言**：Java、C++、C# 等。
+
+2. **Protected（受保护）**：
+   - **定义**：受保护成员可以在类内部及其子类中访问，但外部不能直接访问。
+   - **用途**：用于在继承关系中共享数据或行为，同时限制外部访问。
+   - **示例语言**：Java、C++、C# 等。
+
+3. **Public（公共）**：
+   - **定义**：公共成员可以被类的内部和外部访问，没有访问限制。
+   - **用途**：用于提供对外的公开接口，允许用户调用类的操作。
+   - **示例语言**：所有面向对象的语言。
+
+4. **Package-Private（包私有）**：
+   - **定义**：在某些语言（如 Java）中，成员默认是包私有的，只能在同一包中访问。
+   - **用途**：用于在同一个包内的类之间共享数据和行为。
+   - **示例语言**：Java。
+
+##### **设计上的优劣与取舍**：
+
+1. **数据隐藏 vs 直接访问**：
+   - **优点**：
+     - **安全性**：通过隐藏内部数据，防止外部代码意外修改对象的状态，确保数据的完整性。
+     - **易维护性**：通过限制访问权限，类的实现细节可以在不影响外部代码的情况下进行修改和优化。
+     - **代码复用**：封装后的类可以作为独立的模块复用，减少代码耦合。
+   - **缺点**：
+     - **额外的代码**：为了实现封装，通常需要编写额外的 `getter` 和 `setter` 方法，增加了代码的复杂性。
+     - **性能开销**：在某些性能敏感的场景中，通过方法间接访问属性可能会带来额外的性能开销。
+
+2. **严格封装 vs 灵活设计**：
+   - **优点**：
+     - **增强的安全性**：严格的封装确保了类的实现细节不被外部代码滥用，减少了潜在的错误。
+     - **易于调试**：由于访问受限，问题通常可以在类的内部定位和解决，简化了调试过程。
+   - **缺点**：
+     - **可扩展性限制**：过于严格的封装可能会限制类的扩展性，尤其在继承关系中，子类可能需要访问父类的某些受保护成员。
+
+##### **主流编程语言实现示例**：
+
+1. **Java 实现封装**：
+
+    ```java
+    class Person {
+        // 私有属性，外部无法直接访问
+        private String name;
+        private int age;
+        
+        // 构造方法
+        public Person(String name, int age) {
+            this.name = name;
+            this.age = age;
+        }
+        
+        // 公共的 getter 方法，提供对 name 的访问
+        public String getName() {
+            return name;
+        }
+
+        // 公共的 setter 方法，允许设置 name
+        public void setName(String name) {
+            this.name = name;
+        }
+        
+        // 公共的 getter 方法，提供对 age 的访问
+        public int getAge() {
+            return age;
+        }
+        
+        // 公共的 setter 方法，允许设置 age
+        public void setAge(int age) {
+            if (age > 0) {
+                this.age = age;
+            }
+        }
+        
+        // 公共方法，打印个人信息
+        public void displayInfo() {
+            System.out.println("Name: " + name + ", Age: " + age);
+        }
+    }
+
+    public class Main {
+        public static void main(String[] args) {
+            // 创建 Person 对象
+            Person person = new Person("Alice", 30);
+            
+            // 通过 getter 方法访问私有属性
+            System.out.println("Name: " + person.getName());
+            System.out.println("Age: " + person.getAge());
+            
+            // 使用 setter 方法修改属性
+            person.setAge(31);
+            person.displayInfo();
+        }
+    }
+    ```
+
+    **解释**：
+    - **私有属性**：`name` 和 `age` 是私有属性，不能被类外部直接访问。
+    - **公共接口**：通过 `getName()` 和 `getAge()` 方法提供对私有属性的访问，通过 `setName()` 和 `setAge()` 方法允许修改这些属性。
+    - **封装的优势**：通过 `setAge()` 方法中的检查条件（`age > 0`），可以防止外部代码将 `age` 设置为无效的值，确保数据的正确性。
+
+2. **Python 实现封装**：
+
+    ```python
+    class Person:
+        def __init__(self, name, age):
+            # 私有属性，外部无法直接访问
+            self.__name = name
+            self.__age = age
+        
+        # 公共的 getter 方法，提供对 name 的访问
+        def get_name(self):
+            return self.__name
+    
+        # 公共的 setter 方法，允许设置 name
+        def set_name(self, name):
+            self.__name = name
+        
+        # 公共的 getter 方法，提供对 age 的访问
+        def get_age(self):
+            return self.__age
+        
+        # 公共的 setter 方法，允许设置 age
+        def set_age(self, age):
+            if age > 0:
+                self.__age = age
+        
+        # 公共方法，打印个人信息
+        def display_info(self):
+            print(f"Name: {self.__name}, Age: {self.__age}")
+    
+    # 使用封装
+    person = Person("Alice", 30)
+    
+    # 通过 getter 方法访问私有属性
+    print("Name:", person.get_name())
+    print("Age:", person.get_age())
+    
+    # 使用 setter 方法修改属性
+    person.set_age(31)
+    person.display_info()
+    ```
+
+    **解释**：
+    - **私有属性**：在 Python 中，使用双下划线（`__`）将属性声明为私有，防止外部访问。
+    - **公共接口**：提供 `get_name()` 和 `set_name()` 等方法访问和修改私有属性。
+    - **封装的优势**：通过 `set_age()` 方法可以确保 `age` 的有效性（大于 0）。
+
+##### **Racket 实现解释器中封装的具体代码示例**：
+
+为了在解释器中实现封装功能，需要控制对对象属性的访问权限，限制外部代码直接操作内部数据结构。以下示例展示了如何在解释器中实现封装的概念。
+
+**1. 定义对象和类的数据结构**
+
+首先，我们需要定义类和对象的表示方式，包括私有属性、方法和访问控制机制。
+
+```racket
+#lang racket
+
+;; 定义类结构，包含类名、属性、方法和访问权限
+(struct class-def (name fields methods access-control) #:transparent)
+
+;; 定义对象结构，包含类定义和对象的字段值
+(struct object (class-def field-values) #:transparent)
+
+;; 定义方法结构
+(struct method-def (name params body) #:transparent)
+
+;; 定义访问控制修饰符
+(define-public 'public)
+(define-private 'private)
+```
+
+**2. 实现封装机制**
+
+通过访问控制机制控制
+
+对象属性和方法的可见性，确保类的内部实现细节对外部代码隐藏。
+
+```racket
+;; 查找属性，检查访问权限
+(define (lookup-field obj field-name requester)
+  (let* ([class (object-class-def obj)]
+         [fields (class-def-fields class)]
+         [access-control (class-def-access-control class)]
+         [field (assoc field-name fields)])
+    (if (and field
+             (or (eq? (cdr field) 'public)
+                 (eq? requester class))) ; requester 是类的实例或类本身
+        (list-ref (object-field-values obj) (car field))
+        (error "Access denied for field" field-name))))
+
+;; 设置属性，检查访问权限
+(define (set-field! obj field-name value requester)
+  (let* ([class (object-class-def obj)]
+         [fields (class-def-fields class)]
+         [access-control (class-def-access-control class)]
+         [field (assoc field-name fields)])
+    (if (and field
+             (or (eq? (cdr field) 'public)
+                 (eq? requester class))) ; requester 是类的实例或类本身
+        (set! (list-ref (object-field-values obj) (car field)) value)
+        (error "Access denied for field" field-name))))
+
+;; 调用方法
+(define (call-method obj method-name args requester)
+  (let* ([class (object-class-def obj)]
+         [methods (class-def-methods class)]
+         [method (assoc method-name methods)])
+    (if method
+        (apply (method-def-body (cdr method)) (cons obj args))
+        (error "Method not found" method-name))))
+```
+
+**3. 示例：实现封装的类**
+
+以下示例展示了如何定义一个封装的 `Person` 类，其中包含私有属性 `age` 和公共方法 `get-age`、`set-age`。
+
+```racket
+;; 定义 Person 类
+(define person-class
+  (class-def
+   'Person
+   ;; 定义属性：name 为 public，age 为 private
+   (list (cons 'name 'public) (cons 'age 'private))
+   ;; 定义方法
+   (list
+    (cons 'get-name (method-def 'get-name '() (lambda (self) (lookup-field self 'name self))))
+    (cons 'set-name (method-def 'set-name '(new-name) (lambda (self new-name) (set-field! self 'name new-name self))))
+    (cons 'get-age (method-def 'get-age '() (lambda (self) (lookup-field self 'age self))))
+    (cons 'set-age (method-def 'set-age '(new-age) 
+                               (lambda (self new-age) 
+                                 (if (> new-age 0)
+                                     (set-field! self 'age new-age self)
+                                     (error "Invalid age"))))))
+   '()))
+
+;; 创建 Person 对象
+(define person-instance
+  (object person-class (list "Alice" 30)))
+
+;; 调用方法
+(printf "Name: ~a\n" (call-method person-instance 'get-name '() person-class)) ; 输出: Name: Alice
+(printf "Age: ~a\n" (call-method person-instance 'get-age '() person-class)) ; 输出: Age: 30
+
+;; 修改属性
+(call-method person-instance 'set-age (list 31) person-class)
+(printf "Updated Age: ~a\n" (call-method person-instance 'get-age '() person-class)) ; 输出: Updated Age: 31
+
+;; 尝试直接访问私有属性（应触发错误）
+(lookup-field person-instance 'age person-instance) ; 错误: Access denied for field 'age
+```
+
+**解释**：
+
+1. **类定义**：
+   - 使用 `class-def` 结构定义了 `Person` 类，包含属性 `name` 和 `age`，并为 `name` 设置为公共，`age` 设置为私有。
+   
+2. **封装实现**：
+   - `lookup-field` 和 `set-field!` 函数通过检查访问权限，确保只有类的内部方法才能访问私有属性 `age`。
+   - 公共方法 `get-name` 和 `set-name` 提供了对 `name` 属性的访问，而 `get-age` 和 `set-age` 提供了对 `age` 属性的间接访问。
+
+3. **示例用法**：
+   - 创建了一个 `Person` 对象，调用公共方法获取和设置 `name` 和 `age`。
+   - 直接尝试访问私有属性 `age` 会触发访问拒绝错误，确保了封装的安全性。
+
+##### **总结**：
+
+**封装（Encapsulation）** 是面向对象编程的重要机制，通过将数据与操作封装在类中，隐藏其实现细节，控制对类内部数据的访问权限。封装提高了代码的安全性、模块化和可维护性，允许开发者专注于类的接口，而无需关心其内部实现。通过合理的访问控制，封装机制可以有效防止数据被外部代码篡改，确保系统的一致性和可靠性。
+
+如果您有任何进一步的问题或需要更具体的示例，请随时告诉我！
 
 ### ----------------------------------
 
