--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第15章 子类型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第15章 子类型.md
@@ -2,9 +2,9 @@
 
 
 
-**15 子类型（Subtyping）**
+**15 子类型（Subtyping）**🥑
 
-我们在前几章中研究了简单类型 $\lambda$-演算（Simply Typed Lambda Calculus）框架下各种语言特性的类型行为。本章探讨一个更为基础的扩展：**子类型（Subtyping）**（有时称为**子类型多态（Subtype Polymorphism）**）。不同于我们之前研究的特性，它们可以彼此独立地构建，子类型是一个**交叉性的扩展（cross-cutting extension）**，它与大多数其他语言特性以非平凡的方式交互。
+我们在前几章中研究了🥑简单类型 $\lambda$-演算（Simply Typed Lambda Calculus）框架下各种语言特性的类型行为。本章探讨一个更为基础的扩展：**子类型（Subtyping）**（有时称为**子类型多态（Subtype Polymorphism）**）。不同于我们之前研究的特性，它们可以彼此独立地构建，子类型是一个**交叉性的扩展（cross-cutting extension）**，它与大多数其他语言特性以非平凡的方式交互。
 
 子类型特性通常出现在面向对象语言中，且常被认为是面向对象风格的核心特性。我们将在第18章详细探讨这种联系；现在，我们将在一个更为精简的环境中引入子类型，只有函数和记录，其中已经出现了大部分有趣的问题。第15.5节讨论子类型与之前章节中我们见过的一些其他特性的组合。在最后一节（15.6）中，我们考虑子类型的更精细语义，其中子类型的使用对应于运行时**强制转换（coercions）**的插入。
 
