--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第16章 子类型的元理论.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第16章 子类型的元理论.md
@@ -187,7 +187,7 @@ $S <: T$ 当且仅当 $\vdash_\text{alg} S <: T$。
 
 现在，算法规则是语法导向的，可以直接作为检查算法子类型关系（因此也检查声明式子类型关系）的算法来阅读。用更常规的伪代码表示，算法如下：
 
-```pseudo
+```ocaml
 function subtype(S, T):
     if T == Top:
         return true
