--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/🥑第12章 规范化.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第二部分 简单类型/🥑第12章 规范化.md
@@ -20,7 +20,7 @@
 
 **注**：本章研究的语言是仅包含一个基本类型 $A$ 的简单类型 $\lambda$ 演算（参见图9-1和11-1）。
 
-**练习 12.1.1** [«]：如果我们尝试通过对一个良类型项的大小进行简单的归纳来证明归一化，会在哪一步失败？
+**练习 12.1.1** [«]：🥑🥑🥑🥑如果我们尝试通过对一个良类型项的大小进行简单的归纳来证明归一化，会在哪一步失败？
 
 **解答**：
 
@@ -28,7 +28,7 @@
 
 ---
 
-**关键问题**：在许多归纳证明中，找到一个足够强的**归纳假设**（induction hypothesis）是关键。为此，我们开始为每个类型 $T$ 定义一个集合 $R_T$，其中包含类型为 $T$ 的**闭项**（closed terms）。我们将这些集合视为谓词，写作 $R_T(t)$，表示 $t \in R_T$。
+**关键问题**：在许多归纳证明中，找到一个足够强的**归纳假设**（induction hypothesis）是关键。为此，我们开始为每个类型 $T$ 定义一个集合 $R_T$，其中包含类型为 $T$ 的**闭项**（closed terms）。我们将这些集合视为🥑🥑谓词，写作 $R_T(t)$，表示 $t \in R_T$。
 
 **定义 12.1.2**：
 
@@ -104,7 +104,7 @@
 
 ---
 
-接下来，我们需要证明每个类型为 $T$ 的良类型项都属于 $R_T$。这里，我们将对**类型推导（typing derivations）**进行归纳（在关于良类型项的证明中，涉及对类型推导的归纳是常见的）。
+接下来，我们🥑🥑🥑需要证明每个类型为 $T$ 的良类型项都属于 $R_T$。这里，我们将对**类型推导（typing derivations）**进行归纳（在关于良类型项的证明中，涉及对类型推导的归纳是常见的）。
 
 **技术难点**：处理 $\lambda$ 抽象的情况时会遇到一些技术困难。由于我们是通过归纳进行论证的，当我们想要证明一个项 $\lambda x:T_1.\ t_2$ 属于 $R_{T_1 \to T_2}$ 时，我们需要应用归纳假设来证明 $t_2$ 属于 $R_{T_2}$。但是，$R_{T_2}$ 被定义为闭项的集合，而 $t_2$ 可能包含自由变量 $x$，因此这种方式行不通。
 
